--- a/templates/users.html
+++ b/templates/users.html
@@ -165,7 +165,7 @@ async function loadUsers() {
     showLoading(contentDiv);
 
     try {
-        const response = await fetch('/api/users');
+        const response = await fetch('/api/users?role=user');
         if (!response.ok) {
             throw new Error(`HTTP error! status: ${response.status}`);
         }
